@@ -34,6 +34,9 @@ Version 1.1.1
   - Unify and improve log message output
   - Improve README.md with project description, installation, contributing and
     usage sections
+  - The "--foreground" flag has been removed; usbmuxd now runs in foreground by
+    default. For the previous behaviour, use "--background" to run in
+    background instead.
 
 Version 1.1.0
 ~~~~~~~~~~~~~
